--- a/FE/index.html
+++ b/FE/index.html
@@ -126,8 +126,10 @@
                         <div class="col-md-2 sensor-control">
                             <label class="form-check-label" for="switch-temp">
                                 <div class="sensor-card p-3 text-center">
-                                    <span class="material-symbols-outlined">thermostat</span>
-                                    Nhiệt độ
+                                    <span class="material-symbols-outlined">
+                                        mode_fan
+                                        </span>
+                                    Quạt
                                     <div class="form-check form-switch">
                                         <input class="form-check-input" type="checkbox" id="switch-temp">
                                     </div>
@@ -135,8 +137,10 @@
                             </label>
                             <label class="form-check-label" for="switch-humidity">
                                 <div class="sensor-card p-3 text-center">
-                                    <span class="material-symbols-outlined">water_drop</span>
-                                    Độ ẩm
+                                    <span class="material-symbols-outlined">
+                                        climate_mini_split
+                                        </span>
+                                    Điều hòa
                                     <div class="form-check form-switch">
                                         <input class="form-check-input" type="checkbox" id="switch-humidity">
                                     </div>
@@ -144,8 +148,10 @@
                             </label>
                             <label class="form-check-label" for="switch-light">
                                 <div class="sensor-card p-3 text-center">
-                                    <span class="material-symbols-outlined">light_mode</span>
-                                    Ánh sáng
+                                    <span class="material-symbols-outlined">
+                                        lightbulb
+                                        </span>
+                                    Đèn
                                     <div class="form-check form-switch">
                                         <input class="form-check-input" type="checkbox" id="switch-light">
                                     </div>
